# soft3d-projeto-opengl

./: .gitignore  CMakeLists.txt  Cena.cpp  Cena.h  README.md  main.cpp  main.h  run.sh
